cleaned portfolio up a bit and added two items

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <title>Paul van Motman | Portfolio</title>
-    <meta property="og:url"                content="http://www.paulvanmotman.com" />
+    <meta property="og:url"                content="https://www.paulvanmotman.com" />
     <meta property="og:type"               content="Portfolio" />
     <meta property="og:title"              content="Paul van Motman | Portfolio" />
     <meta property="og:description"        content="Paul van Motman, Paul, van Motman, Developer, front-end, back-end, ontwikkelaar, programmeur, software, application, app, website, design, ondernemer, entrepreneur" />
-    <meta property="og:image"              content="http://www.paulvanmotman.com/img/website.png" />
+    <meta property="og:image"              content="https://www.paulvanmotman.com/img/website.png" />
     <meta name="author" content="Paul van Motman">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
@@ -90,10 +90,10 @@
                         I'm part of the B.Startup School Amsterdam, where I have participated in an intensive coding bootcamp by the New York Code + Design Academy. This training gave me the opportunity to gain a good deal of experience in programming in general and in working with JavaScript as a front and back end language in particular. Currently, I'm working for the New York Code & Design Academy as a teacher assistant. 
                     </p>
                     <p class="light">
-                        My bachelor International Development Studies has provided me with a solid foundation in international law, economics, sociology and sustainability, as well as professional and hands-on project management skills and capabilities. During my Master BA: Entrepreneurship and Innovation I’ve developed a sophisticated understanding of entrepreneurial decision making, innovative business models and new product development 
+                        My bachelor International Development Studies has provided me with a solid foundation in international law, economics, sociology and sustainability, as well as professional and hands-on project management skills and capabilities. During my Master BA: Entrepreneurship and Innovation I’ve developed a great understanding of entrepreneurial decision making, innovative business models and new product development. 
                     </p>
                     <p class="light">
-                        Starting 1st of January I'm seeking new opportunities as a junior developer in Amsterdam. I'm interested in innovative and sustainable tech-startups or social enterprises within sustainability, the circulair economy or fin-tech. Also I have a high interest in working at digital agencies and working on many different projects using new frameworks and languages. 
+                        Starting 1st of January I'm seeking new opportunities as a junior developer in Amsterdam. I'm interested in innovative and sustainable tech-startups or social enterprises within sustainability, the circulair economy, blockchain or fin-tech. Also I have a high interest in working at digital agencies and working on many different projects, using the newest frameworks and languages. 
                     </p>
                 </div>
             </div>
@@ -144,7 +144,7 @@
         <div class="row">
             <div class="col s12 m6 l6 left-align">  
                 <p class="light">
-                    Lately I've been working on two apps during the NYCDA class, Mentor and Guesty. Both are build on Node.js, Express, Postgresql and JQuery. Check out their details below. Also I've created the website for the non-profit Scarf. At the moment I'm working on an app build with React, more info coming soon.
+                    At the moment I'm working on a chat-application build on React, Node and Firebase (please see below). The coming months I'm planning to build more applications with this stack. During the NYCDA class I created Mentor, Guesty and the website Scarf. Mentor and Guesty are build with Node.js, Express, Postgresql and JQuery. 
                 </p>
             </div>
                <div class="col s12 m6 l6 left-align" id="space">  
@@ -161,6 +161,51 @@
             </div>
         </div>
         <div class="row" id=container>
+            <div class="mix all app col s12 m6 l6">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator projectpic" src="img/project7.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">React chat app <i class="mdi-navigation-more-vert right"></i></span>
+                        <p><a target="_blank" href="https://paulvanmotman.github.io/reactchatapp/"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Live Demo</span></a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">React chat app <i class="mdi-navigation-close right"></i></span>
+                        <p>
+                            After the NYCDA course which ended in July, I determined I wanted to focus on front-end web-development. I was set on learning the javascript framework everyone was so positive about: React.js
+                        </p>
+                        <p>
+                            After following a couple of tutorials I decided to make my own chat application to really test my knowledge of React. Whilst making this app I didn't look at any examples, and also didn't use Redux. To fully understand the strength (and flaws) I first wanted to work with pure React.
+                        </p>
+                        <p>
+                            There is a live demo and I've included firebase as a real-time database. Check my <a target="_blank" href="https://github.com/PaulvanMotman/reactchatapp">github</a> for the codebase.
+                        </p>
+                        <p><a target="_blank" href="https://paulvanmotman.github.io/reactchatapp/"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Live Demo</span></a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="mix all app col s12 m6 l6">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator projectpic" src="img/project8.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">JQuery Star Wars quiz<i class="mdi-navigation-more-vert right"></i></span>
+                        <p><a target="_blank" href="https://paulvanmotman.github.io/starwarsquiz/"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Live Demo</span></a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">JQuery Star Wars quiz <i class="mdi-navigation-close right"></i></span>
+                        <p>
+                            To further strengthen my skills with JQuery and front-end javascript I decided to make a one-page quiz application. There are a number of JQuery-quiz pluggins out there but I wanted to build it from scratch.
+                        </p>
+                        <p>
+                            It was a fun and educational experience and I've included a live demo below. Check my <a target="_blank" href="https://github.com/PaulvanMotman/starwarsquiz">github</a> for the codebase.
+                        </p>
+                        <p><a target="_blank" href="https://paulvanmotman.github.io/starwarsquiz/"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Live Demo</span></a></p>
+                    </div>
+                </div>
+            </div>
             <div class="mix all app col s12 m6 l6">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -303,7 +348,7 @@
                             He named me line producer. This meant I was responsible for organising the production in the broadest sense: provide necessary facilities, equipment and people, in the right place at the right time. I also managed budget and time restrictions. 
                         </p>
                         <p>
-                            All things considered a great experience where I've learned a lot about the enormous struggle of making movies. Could defenitly do again! 
+                            All things considered a great experience where I've learned a lot about the enormous struggle of making movies. I would defenitly do this again! 
                         </p>
                         <p><a target="_blank" href="http://www.imdb.com/title/tt5432722/?ref_=nm_knf_t1"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Imdb</span></a></p>
                     </div>
@@ -355,13 +400,22 @@
     </div>
 </footer>
 
-
     <!--  Scripts-->
     <script src="min/plugin-min.js"></script>
     <script src="min/custom-min.js"></script>
     <script type="text/javascript" src="js/jquery.mixitup.js"></script>
 
     <script type="text/javascript" src="js/custom.js"></script>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-88254222-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 
     </body>
 </html>
