added game to portfolio

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
             </div>
              <div  class="col s12 center-align">
-                 <a href="https://www.paulvanmotman.com/cv/index.html" target="_blank"><button class="filter waves-effect waves-light btn" id="button2">CHECK OUT MY CV</button></a>
+                 <a href="https://www.paulvanmotman.com/game/index.html" target="_blank"><button class="filter waves-effect waves-light btn" id="button2">WANNA PLAY?</button></a>
             </div>
         </div>
     </div>
