updated portfolio to include game

--- a/index.html
+++ b/index.html
@@ -185,6 +185,27 @@
                     </div>
                 </div>
             </div>
+               <div class="mix all app col s12 m6 l6">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator projectpic" src="img/project9.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Clicking game with anime.js<i class="mdi-navigation-more-vert right"></i></span>
+                        <p><a target="_blank" href="https://www.paulvanmotman.com/game/index.html"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Live Demo</span></a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Clicking game with anime.js <i class="mdi-navigation-close right"></i></span>
+                        <p>
+                            To further strengthen my skills with animations and front-end javascript I decided to make a clicking game. It's pretty challenging, and also pretty fun! 
+                        </p>
+                        <p>
+                            I've included a live demo below (Desktop only!). Try and beat the highscore ;). Check my <a target="_blank" href="https://github.com/PaulvanMotman/clickinggame">github</a> for the codebase.
+                        </p>
+                        <p><a target="_blank" href="https://www.paulvanmotman.com/game/index.html"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Live Demo</span></a></p>
+                    </div>
+                </div>
+            </div>
             <div class="mix all app col s12 m6 l6">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
