--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <img class="activator projectpic" src="img/project9.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Clicking game with anime.js<i class="mdi-navigation-more-vert right"></i></span>
+                        <span class="card-title activator grey-text text-darken-4">Clicking game (desktop only)<i class="mdi-navigation-more-vert right"></i></span>
                         <p><a target="_blank" href="https://www.paulvanmotman.com/game/index.html"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Live Demo</span></a></p>
                     </div>
                     <div class="card-reveal">
