--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </div>
                 </div>
             </div>
-             <div  class="col s12 center-align">
+             <div  class="col s12 center-align hide-on-med-and-down">
                  <a href="https://www.paulvanmotman.com/game/index.html" target="_blank"><button class="filter waves-effect waves-light btn" id="button2">WANNA PLAY?</button></a>
             </div>
         </div>
