--- a/index.html
+++ b/index.html
@@ -72,11 +72,8 @@
 <div id="intro" class="section scrollspy">
     <div class="container">
         <div class="row">
-            <div class="center-align col s12">
+            <div class="center-align col s12 headerpic">
                 <img src="img/paulheadshot.jpg" id="headshot" class="z-depth-3">
-            </div>
-            <div  class="col s12">
-                <h3 class="center header text_h2"> I am looking for career opportunities as a junior developer in Amsterdam </h2> 
             </div>
             <div  class="col s12 m6 l6">
                 <div class="promo promo-example">
@@ -87,14 +84,15 @@
                         <strong>Graduate in Innovation and International Development gone Coding</strong>
                     </p>
                      <p class="light">
-                        I'm part of the B.Startup School Amsterdam, where I have participated in an intensive coding bootcamp by the New York Code + Design Academy. This training gave me the opportunity to gain a good deal of experience in programming in general and in working with JavaScript as a front and back end language in particular. Currently, I'm working for the New York Code & Design Academy as a teacher assistant. 
+                       After obtaining a bachelor degrees in economic development and policy in Wageningen (WUR) and a master in Innovation & Entrepreneurship in Amsterdam (VU), I decided to pursue something I developed a growing imnterest in during my years in university: learn how to code! I participated in a traineeship of the B. Amsterdam Startup School. From this opportunity, I've gained a good deal of experience in programming in general, and in working with JavaScript as a front and back end language in particular. 
                     </p>
                     <p class="light">
-                        My bachelor International Development Studies has provided me with a solid foundation in international law, economics, sociology and sustainability, as well as professional and hands-on project management skills and capabilities. During my Master BA: Entrepreneurship and Innovation I’ve developed a great understanding of entrepreneurial decision making, innovative business models and new product development. 
+                        I think that the ability to code gives you the tools and skills to have an impact, since technology and start-ups are changing the world at an incredible speed. For now, my aim is to become an awesome programmer. In the future, I will always have interest in being involved in highly innovative projects within the fields of blockchain, fin-tech, sustainability or the circulair economy.
                     </p>
                     <p class="light">
-                        Starting 1st of January I'm seeking new opportunities as a junior developer in Amsterdam. I'm interested in innovative and sustainable tech-startups or social enterprises within sustainability, the circulair economy, blockchain or fin-tech. Also I have a high interest in working at digital agencies and working on many different projects, using the newest frameworks and languages. 
+                        At the moment I'm working at Bizboard! Bizboard is a digital innovation studio that has developed their own open-source javascript framework (<a href="https://github.com/Bizboard/arva-js">Arva</a>). Using the newest ES6/7 syntax, we create highly animated cross-platform applications. I work here full-time as a junior developer.
                     </p>
+
                 </div>
             </div>
             <div  class="right col s12 m6 l6s">
